--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>居中超链接示例</title>
+    <title>居中链接</title>
     <style>
         body {
             display: flex;
@@ -11,29 +9,10 @@
             align-items: center;
             height: 100vh;
             margin: 0;
-            font-family: Arial, sans-serif;
-        }
-        .link-container {
-            text-align: center;
-        }
-        a {
-            color: #0066cc;
-            text-decoration: none;
-            font-size: 24px;
-            padding: 10px 20px;
-            border: 2px solid #0066cc;
-            border-radius: 5px;
-            transition: all 0.3s ease;
-        }
-        a:hover {
-            background-color: #0066cc;
-            color: white;
         }
     </style>
 </head>
 <body>
-    <div class="link-container">
-        <a href="https://abcdd12344.github.io/rse.html" target="_blank">rse</a>
-    </div>
+    <a href="https://abcdd12344.github.io">点击这里</a>
 </body>
 </html>
