--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     </style>
 </head>
 <body>
-    <a href="https://abcdd12344.github.io">点击这里</a>
+    <a href="https://abcdd12344.github.io/rse.html">点击这里</a>
 </body>
 </html>
