--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>居中链接</title>
+    <title>abcdd</title>
     <style>
         body {
             display: flex;
@@ -13,6 +13,7 @@
     </style>
 </head>
 <body>
-    <a href="https://abcdd12344.github.io/rse.html">点击这里</a>
+    <a href="https://abcdd12344.github.io/rse.html"></a>
+    <a href="https://abcdd12344.github.io/note.html"></a>
 </body>
 </html>
