--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </style>
 </head>
 <body>
-    <a href="https://abcdd12344.github.io/rse.html"></a>
-    <a href="https://abcdd12344.github.io/note.html"></a>
+    <a href="https://abcdd12344.github.io/rse.html">rse</a>
+    <a href="https://abcdd12344.github.io/note.html">note</a>
 </body>
 </html>
