--- a/note.html
+++ b/note.html
@@ -21,7 +21,7 @@
         // 从 GitHub 获取内容
         async function loadContent() {
             try {
-                const response = await fetch('https://api.github.com/repos/YOUR_USERNAME/YOUR_REPO/contents/shared.txt');
+                const response = await fetch('https://api.github.com/repos/abcdd12344/abcdd12344.github.io/contents/shared.txt');
                 const data = await response.json();
                 editor.value = atob(data.content);
                 status.textContent = '内容已加载';
@@ -36,10 +36,10 @@
             const message = `Update at ${new Date().toISOString()}`;
             
             try {
-                const response = await fetch('https://api.github.com/repos/YOUR_USERNAME/YOUR_REPO/contents/shared.txt', {
+                const response = await fetch('https://api.github.com/repos/abcdd12344/abcdd12344.github.io/contents/shared.txt', {
                     method: 'PUT',
                     headers: {
-                        'Authorization': 'token YOUR_GITHUB_TOKEN',
+                        'Authorization': 'token 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',
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
