--- a/note.html
+++ b/note.html
@@ -39,13 +39,13 @@
                 const response = await fetch('https://api.github.com/repos/abcdd12344/abcdd12344.github.io/contents/shared.txt', {
                     method: 'PUT',
                     headers: {
-                        'Authorization': 'token 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',
+                        'Authorization': 'token abcdd',
                         'Content-Type': 'application/json'
                     },
                     body: JSON.stringify({
                         message: message,
                         content: content,
-                        sha: '' // 第一次可以为空
+                        sha: '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' // 第一次可以为空
                     })
                 });
                 
