--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
     </style>
 </head>
 <body>
-    <a href="https://abcdd12344.github.io/rse.html">rse </a>
-    <a href="https://abcdd12344.github.io/note.html">note</a>
+  <ul>
+  <li><a href="https://abcdd12344.github.io/rse.html">rse </a></li>
+  <li><a href="https://abcdd12344.github.io/note.html">note</a></li>
+  <li><a href="https://www.example3.com">链接3</a></li>
+  </ul>
 </body>
 </html>
