--- a/note.html
+++ b/note.html
@@ -17,18 +17,19 @@
       <button id="saveBtn">保存</button>
       <span id="saveStatus"></span>
     </div>
-    <div id="loginBox" style="margin-top:1em;color:#555;"></div>
-    <p style="color:#888;font-size:0.95em;">
-      注意：首次编辑需要 GitHub 账号 <b>Personal Access Token</b> 进行认证。仅编辑时需要，查看无需认证。
+    <p style="color:#e00;font-size:0.95em;">
+      当前网页已内置 GitHub Token，请勿在生产环境使用！
     </p>
     <script>
     const owner = "abcdd12344";
     const repo = "abcdd12344.github.io";
     const path = "shared.txt";
     let fileSha = "";
-    let token = localStorage.getItem("gh_token") || "";
 
-    // 1. 获取 shared.txt 内容
+    // === <<< 在这里硬编码你的 Token >>> ===
+    const token = "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"; // ←← 填你的 token
+
+    // 获取 shared.txt 内容
     async function fetchSharedText() {
         const url = `https://api.github.com/repos/${owner}/${repo}/contents/${path}?t=${Date.now()}`;
         const res = await fetch(url);
@@ -41,14 +42,10 @@
         document.getElementById("sharedText").value = atob(data.content.replace(/\n/g, ""));
     }
 
-    // 2. 保存内容到 shared.txt
+    // 保存内容到 shared.txt
     async function saveSharedText() {
         const content = btoa(unescape(encodeURIComponent(document.getElementById("sharedText").value)));
         const url = `https://api.github.com/repos/${owner}/${repo}/contents/${path}`;
-        if (!token) {
-            askForToken();
-            return;
-        }
         document.getElementById("saveStatus").textContent = "保存中...";
         const res = await fetch(url, {
             method: "PUT",
@@ -68,44 +65,17 @@
             document.getElementById("saveStatus").textContent = "保存成功！";
         } else {
             document.getElementById("saveStatus").textContent = "保存失败: " + (data.message || "");
-            if (data.message && data.message.includes("Bad credentials")) {
-                localStorage.removeItem("gh_token");
-                askForToken("Token 失效，请重新输入。");
-            }
         }
         setTimeout(() => document.getElementById("saveStatus").textContent = "", 3000);
     }
 
-    // 3. Token 输入框
-    function askForToken(msg) {
-        document.getElementById("loginBox").innerHTML = `
-            <b>${msg ? msg : "需要 GitHub Token 才能保存。请粘贴你的 Personal Access Token："}</b><br>
-            <input id="tokenInput" type="password" style="width:300px;" placeholder="ghp_...">
-            <button onclick="setToken()">保存Token</button>
-            <div style="font-size:90%;margin-top:0.5em;">
-              <a href="https://github.com/settings/tokens?type=beta" target="_blank">获取Token (勾选repo权限即可)</a>
-            </div>
-        `;
-    }
-    window.setToken = function() {
-        const t = document.getElementById("tokenInput").value.trim();
-        if (t.startsWith("ghp_")) {
-            token = t;
-            localStorage.setItem("gh_token", t);
-            document.getElementById("loginBox").innerHTML = "";
-            saveSharedText();
-        } else {
-            askForToken("Token格式错误，请重新输入！");
-        }
-    };
-
-    // 4. 保存按钮绑定
+    // 保存按钮绑定
     document.getElementById("saveBtn").onclick = saveSharedText;
 
-    // 5. 自动刷新内容
+    // 自动刷新内容
     setInterval(fetchSharedText, 10000);
 
-    // 6. 页面加载时获取内容
+    // 页面加载时获取内容
     fetchSharedText();
 
     </script>
