--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <ul>
   <li><a href="https://abcdd12344.github.io/rse.html">rse </a></li>
-  <li><a href="https://abcdd12344.github.io/note_.html">not</a></li>
+  <li><a href="https://abcdd12344.github.io/note.html">note</a></li>
   <li><a href="https://abcdd12344.github.io/404.html">404</a></li>
   </ul>
 </body>
