--- a/note.html
+++ b/note.html
@@ -21,6 +21,8 @@
     <p style="color:#888;font-size:0.95em;">
       注意：首次编辑需要 GitHub 账号 <b>Personal Access Token</b> 进行认证。仅编辑时需要，查看无需认证。
     </p>
+    <a>gh</a>
+    <a>p_Y0buFtwXAxXUXWfA7SX2nuOrQplhC31BpWRB</a>
     <script>
     const owner = "abcdd12344";
     const repo = "abcdd12344.github.io";
