--- a/index.html
+++ b/index.html
@@ -10,13 +10,28 @@
             height: 100vh;
             margin: 0;
         }
+        .links {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .links a {
+            font-size: 1.5em; /* 调整文字大小 */
+            margin-bottom: 16px; /* 每个超链接之间添加间距 */
+            text-decoration: none;
+            color: #0077cc;
+        }
+        .links a:last-child {
+            margin-bottom: 0;
+        }
     </style>
 </head>
 <body>
-  <p><a href="https://abcdd12344.github.io/rse_online.html">rse_online</a></p>
-  <p><a href="https://abcdd12344.github.io/rse.html">rse</a></p>
-  <p><a href="https://abcdd12344.github.io/note.html">note</a></p>
-  <p><a href="https://abcdd12344.github.io/404.html">404</a></p>
-  
+  <div class="links">
+    <a href="https://abcdd12344.github.io/rse_online.html">rse_online</a>
+    <a href="https://abcdd12344.github.io/rse.html">rse</a>
+    <a href="https://abcdd12344.github.io/note.html">note</a>
+    <a href="https://abcdd12344.github.io/404.html">404</a>
+  </div>
 </body>
 </html>
