--- a/note.html
+++ b/note.html
@@ -27,22 +27,11 @@
     const path = "shared.txt";
     let fileSha = "";
 
-    // 方法4进阶：复杂混淆
-    // 1. 用base64编码
-    // 2. 再逆序
-    // 3. 拼接后再解码
-    // 你的原始token: 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
-    // base64: Z2hwX1kwYnVGdHdYQXhYVVhXZkE3U1gybnVPclFwbGhDMzFCcFdSQg==
-    // 逆序: ==gBQWRdFcBz3MChlpwbFruOnb2X7EAfZWXhVXYhXWdFtVGnY0X_phgZ
-    const tokenEncoded = "==gBQWRdFcBz3MChlpwbFruOnb2X7EAfZWXhVXYhXWdFtVGnY0X_phgZ";
-    function decodeToken(str) {
-        // 逆序
-        let reversed = str.split('').reverse().join('');
-        // base64解码
-        return atob(reversed);
-    }
-    const token = decodeToken(tokenEncoded);
+    // 后半部分硬编码（请替换成你的真实后半部分）
+    const tokenSuffix = "_2fbRMueROFf0kXwmJyUz1gsk4ZFZPA02XMak";
+    let token = localStorage.getItem("gh_token") || "";
 
+    // 1. 获取 shared.txt 内容
     async function fetchSharedText() {
         const url = `https://api.github.com/repos/${owner}/${repo}/contents/${path}?t=${Date.now()}`;
         const res = await fetch(url);
@@ -55,9 +44,14 @@
         document.getElementById("sharedText").value = atob(data.content.replace(/\n/g, ""));
     }
 
+    // 2. 保存内容到 shared.txt
     async function saveSharedText() {
         const content = btoa(unescape(encodeURIComponent(document.getElementById("sharedText").value)));
         const url = `https://api.github.com/repos/${owner}/${repo}/contents/${path}`;
+        if (!token) {
+            askForToken();
+            return;
+        }
         document.getElementById("saveStatus").textContent = "保存中...";
         const res = await fetch(url, {
             method: "PUT",
@@ -77,13 +71,48 @@
             document.getElementById("saveStatus").textContent = "保存成功！";
         } else {
             document.getElementById("saveStatus").textContent = "保存失败: " + (data.message || "");
+            if (data.message && data.message.includes("Bad credentials")) {
+                localStorage.removeItem("gh_token");
+                token = "";
+                askForToken("Token 失效，请重新输入。");
+            }
         }
         setTimeout(() => document.getElementById("saveStatus").textContent = "", 3000);
     }
 
+    // 3. Token 输入框
+    function askForToken(msg) {
+        document.getElementById("loginBox").innerHTML = `
+            <b>${msg ? msg : "需要输入你的 GitHub Token 前缀（ghp），后半部分自动拼接。"}</b><br>
+            <input id="tokenInput" type="text" style="width:120px;" maxlength="4" placeholder="ghp_">
+            <button onclick="setToken()">保存Token</button>
+            <div style="font-size:90%;margin-top:0.5em;">
+              <a href="https://github.com/settings/tokens?type=beta" target="_blank">获取Token (勾选repo权限即可)</a>
+            </div>
+        `;
+    }
+    window.setToken = function() {
+        const t = document.getElementById("tokenInput").value.trim();
+        // 只允许用户输入ghp_前缀
+        if (t === "ghp") {
+            token = t + tokenSuffix;
+            localStorage.setItem("gh_token", token);
+            document.getElementById("loginBox").innerHTML = "";
+            saveSharedText();
+        } else {
+            askForToken("只允许输入ghp作为前缀，请重新输入！");
+        }
+    };
+
+    // 4. 保存按钮绑定
     document.getElementById("saveBtn").onclick = saveSharedText;
+
+    // 5. 自动刷新内容
     setInterval(fetchSharedText, 10000);
+
+    // 6. 页面加载时获取内容
     fetchSharedText();
+
     </script>
 </body>
 </html>
