--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
     <a href="https://abcdd12344.github.io/rse.html">rse</a>
     <a href="https://abcdd12344.github.io/note.html">note</a>
     <a href="https://abcdd12344.github.io/404.html">404</a>
+    <a href="https://abcdd12344.github.io/manager.html">manager</a>
   </div>
 </body>
 </html>
